--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
